# movie

./: Cargo.toml  LICENSE-APACHE.md  README.md  docs.sh
movie_derive/: Cargo.toml  README.md
movie_derive/src/: lib.rs
movie_example/: Cargo.toml
movie_example/src/: lib.rs
movie_utils/: Cargo.toml
movie_utils/src/: lib.rs
src/: lib.rs
tests/: advanced.rs  simple.rs  simplest.rs
