[package]
name = "movie_example"
version = "0.1.0"
authors = ["Paweł Zmarzły <pawo2500@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Example crate using `movie`"
repository = "https://github.com/movie-rs/movie"
readme = "README.md"
documentation = "https://movie.pzmarzly.pl/movie"

[dependencies]
"movie" = { path = "..", version = "0.1.0" }
